# flyte

./: .gitignore
sdk/: .gitignore  .ignore  .pre-commit-config.yaml  Makefile  pyproject.toml
sdk/.github/actions/setup-python-env/: action.yml
sdk/.github/workflows/: lint.yml  publish.yml  tests.yml
sdk/examples/: run_all.sh  use_cache.py
sdk/examples/advanced/: cancel_tasks.py  container_task.py  fractal.py  leaky_coroutines.py  local_tasks.py  log_every_second.py  multi_loops.py  multi_run.py  pod_template.py
sdk/examples/basics/: Dockerfile.example  container_images.py  dataclass_examples.py  dataframe.py  devbox_one.py  exception_handling.py  file.py  frames.py  from_scratch.py  grouping.py  hello.py  hello_v2.py  map.py  no_outputs.py  offloaded_types.py  repeated_tasks.py  report_example.py  resources.py  union_type_simple.py  union_types.py  using_dockerfiles.py
sdk/examples/code-runner/: code_runner.py  code_runner_agent.py  llm_generated.py
sdk/examples/deploy_patterns/dockerfile/: dockerfile_env.py  requirements.txt
sdk/examples/genai/: hello_agent.py  smolagent.py
sdk/examples/genai/deep_research_agent/: README.md  agent.py
sdk/examples/genai/trading_agents/: README.md  flyte_env.py  main.py
sdk/examples/image/: .dockerignore  base_image.py  multi_image.py  requirements.txt  uv_image.py
sdk/examples/interactive/: interactive.ipynb  remote.ipynb
sdk/examples/migration/: v1_workflow.py
sdk/examples/ml/: distributed_random_forest.py  model_training.py  optimizer.py  rfe.py
sdk/examples/multi_env/: README.md
sdk/examples/plugins/: ray_example.py  spark_example.py
sdk/examples/queue-reader/: generator.py  processor.py
sdk/examples/reference_tasks/: README.md  deploy.py  root_env.py  spark_env.py  torch_env.py
sdk/examples/reuse/: .dockerignore  errors.py  oomer_reuse.py  reusable.py
sdk/examples/stress/: cpu_gremlin.py  fast_crasher.py  large_fanout.py  long_recovery.py
sdk/import_profiles/: flyte_importtime.txt
sdk/maint_tools/: build_default_image.py  fake_aws_session.sh
sdk/plugins/: README.md
sdk/plugins/ray/: README.md  pyproject.toml
sdk/plugins/spark/: README.md  pyproject.toml
sdk/src/flyte/: __init__.py  _build.py  _context.py  _deploy.py  _doc.py  _docstring.py  _environment.py  _excepthook.py  _group.py  _image.py  _initialize.py  _interface.py  _logging.py  _map.py  _pod.py  _resources.py  _retry.py  _reusable_environment.py  _run.py  _secret.py  _task.py  _task_environment.py  _task_plugins.py  _timeout.py  _tools.py  _trace.py  errors.py  extend.py  models.py
sdk/src/flyte/_bin/: runtime.py
sdk/src/flyte/_cache/: __init__.py  cache.py  defaults.py  policy_function_body.py
sdk/src/flyte/_code_bundle/: __init__.py  _ignore.py  _packaging.py  _utils.py  bundle.py
sdk/src/flyte/_internal/: __init__.py
sdk/src/flyte/_utils/: __init__.py  asyn.py  async_cache.py  coro_management.py  file_handling.py  helpers.py  org_discovery.py  uv_script_parser.py
sdk/src/flyte/cli/: __init__.py  _abort.py  _build.py  _common.py  _create.py  _delete.py  _deploy.py  _gen.py  _get.py  _params.py  _run.py  main.py
sdk/src/flyte/config/: __init__.py  _config.py  _internal.py  _reader.py
sdk/src/flyte/extras/: __init__.py  _container.py
sdk/src/flyte/io/: __init__.py  _dir.py  _file.py
sdk/src/flyte/migrate/: __init__.py  dynamic.py  task.py
sdk/src/flyte/remote/: __init__.py  _action.py  _console.py  _data.py  (+5 more)
sdk/tests/: conftest.py
sdk/tests/benchmark/: module_load_test.py
sdk/tests/cli/: test_run.py
sdk/tests/flyte/: test_image.py  test_image_builder.py  test_image_cache.py  test_int_image_builder.py  test_logging.py  test_parent_action.py  test_signature_parsing.py  test_sync_tasks.py  test_union_run_basic.py
sdk/tests/internal/: pickle_test.py  test_context.py
sdk/tests/user_api/: test_examples.py  test_groups.py  test_interface.py  test_override.py  test_resources.py  test_task_environment.py
sdk/tests/utils/: test_async_cache.py  test_uv_script_parser.py
(+166 files in other folders)
